force-app/main/default/objects/Loan__c/Loan__c.object-meta.xml
<CustomObject>
    <description>This object stores loan agreements, including terms, status, and associated borrower and financial details</description>
    <label>Loan</label>
    <nameField>
        <label>Loan Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Loans</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>