force-app/main/default/objects/Loan__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>References the account (e.g., company or individual) responsible for the loan agreement. Used to associate the loan with a customer record in Salesforce</description>
    <inlineHelpText>References the account (e.g., company or individual) responsible for the loan agreement. Used to associate the loan with a customer record in Salesforce</inlineHelpText>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Loans</relationshipLabel>
    <relationshipName>Loans</relationshipName>
    <type>Lookup</type>
</CustomField>