force-app/main/default/objects/Loan__c/fields/Address__c.field-meta.xml
<CustomField>
    <fullName>Address__c</fullName>
    <description>The full address of the property or asset used as security or collateral for the loan. This field helps identify the location tied to the loan agreement</description>
    <label>Security Address</label>
    <length>255</length>
    <type>Text</type>
</CustomField>