force-app/main/default/objects/Loan__c/fields/Gross_Loan_Amount__c.field-meta.xml
<CustomField>
    <fullName>Gross_Loan_Amount__c</fullName>
    <description>The total gross amount approved for the loan before deductions or charges</description>
    <inlineHelpText>The total gross amount approved for the loan before deductions or charges</inlineHelpText>
    <label>Gross Loan Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>